build.log
gcc -Wall -g -c login-signup.c -o login-signup.o
login-signup.c:16:19: error: too few arguments to function call, single argument 'size' was not specified
    get_all_users();
    ~~~~~~~~~~~~~ ^
./headers.h:31:7: note: 'get_all_users' declared here
User *get_all_users(int *size);
      ^
1 error generated.
make: *** [login-signup.o] Error 1
